--- a/Dockerfile.txt
+++ b/Dockerfile.txt
@@ -1,20 +1,29 @@
-# Use Python as the base image
+# Use Python as base
 FROM python:3.9
 
-# Install FFmpeg (needed for pydub)
-RUN apt-get update && apt-get install -y ffmpeg
+# Install dependencies: FFmpeg, Chrome prerequisites, and Google Chrome
+RUN apt-get update && apt-get install -y \
+    ffmpeg \
+    wget \
+    gnupg2
+
+# Install Google Chrome
+RUN wget -q -O - https://dl.google.com/linux/linux_signing_key.pub | apt-key add - && \
+    echo "deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main" >> /etc/apt/sources.list.d/google-chrome.list && \
+    apt-get update && \
+    apt-get install -y google-chrome-stable
 
 # Set the working directory
 WORKDIR /app
 
-# Copy all project files into the container
+# Copy project files
 COPY . .
 
-# Install Python dependencies
+# Install dependencies
 RUN pip install -r requirements.txt
 
-# Expose the Flask port
+# Expose the port for Flask
 EXPOSE 5000
 
-# Start the server using gunicorn
+# Start the server using Gunicorn
 CMD ["gunicorn", "-b", "0.0.0.0:5000", "server:app"]
