--- a/Dockerfile.txt
+++ b/Dockerfile.txt
@@ -1,11 +1,20 @@
 # Use Python as the base image
 FROM python:3.9
 
-# Install necessary dependencies including Chrome
-RUN apt-get update && apt-get install -y wget gnupg && \
-    wget -q -O - https://dl.google.com/linux/linux_signing_key.pub | apt-key add - && \
+# Install necessary dependencies
+RUN apt-get update && apt-get install -y wget curl unzip gnupg
+
+# Install Google Chrome
+RUN wget -q -O - https://dl.google.com/linux/linux_signing_key.pub | apt-key add - && \
     echo 'deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main' >> /etc/apt/sources.list.d/google.list && \
-    apt-get update && apt-get install -y google-chrome-stable ffmpeg
+    apt-get update && apt-get install -y google-chrome-stable
+
+# Install ChromeDriver (matching Chrome version)
+RUN CHROME_VERSION=$(google-chrome --version | awk '{print $3}' | cut -d '.' -f 1) && \
+    wget -O /tmp/chromedriver.zip https://chromedriver.storage.googleapis.com/${CHROME_VERSION}.0.0/chromedriver_linux64.zip && \
+    unzip /tmp/chromedriver.zip -d /usr/local/bin/ && \
+    rm /tmp/chromedriver.zip && \
+    chmod +x /usr/local/bin/chromedriver
 
 # Set the working directory
 WORKDIR /app
