--- a/Dockerfile.txt
+++ b/Dockerfile.txt
@@ -6,10 +6,13 @@ RUN apt-get update && apt-get install -y wget curl unzip gnupg
 
 # Install Google Chrome
 RUN wget -q -O - https://dl.google.com/linux/linux_signing_key.pub | apt-key add - && \
-    echo 'deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main' >> /etc/apt/sources.list.d/google.list && \
+    echo 'deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main' > /etc/apt/sources.list.d/google.list && \
     apt-get update && apt-get install -y google-chrome-stable
 
-# Verify installation
+# Create a symlink so that Chrome is available at /usr/bin/google-chrome
+RUN ln -sf /usr/bin/google-chrome-stable /usr/bin/google-chrome
+
+# Verify installation (outputs chrome version)
 RUN which google-chrome && google-chrome --version
 
 # Set the working directory
@@ -18,8 +21,8 @@ WORKDIR /app
 # Copy all project files into the container
 COPY . .
 
-# Install Python dependencies
-RUN pip install -r requirements.txt
+# Upgrade pip and install Python dependencies
+RUN pip install --upgrade pip && pip install -r requirements.txt
 
 # Expose the Flask port
 EXPOSE 5000
