--- a/Dockerfile.txt
+++ b/Dockerfile.txt
@@ -23,13 +23,15 @@ RUN apt-get update && apt-get install -y \
 
 # Add Google’s official GPG key and repository for Chrome
 RUN wget -q -O - https://dl.google.com/linux/linux_signing_key.pub | apt-key add - && \
-    echo "deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main" \
-       > /etc/apt/sources.list.d/google-chrome.list
+    echo "deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main" > /etc/apt/sources.list.d/google-chrome.list
 
 # Install Google Chrome
 RUN apt-get update && apt-get install -y \
     google-chrome-stable \
     --no-install-recommends
+
+# Create symbolic link for Chrome so Selenium can find it
+RUN ln -s /usr/bin/google-chrome-stable /usr/bin/google-chrome
 
 # Set the working directory
 WORKDIR /app
@@ -37,7 +39,7 @@ WORKDIR /app
 # Copy all project files into the container
 COPY . .
 
-# Upgrade pip and install Python dependencies (make sure your requirements.txt includes flask, flask-cors, requests, selenium, webdriver-manager, and pydub)
+# Upgrade pip and install Python dependencies (requirements.txt should include flask, requests, selenium, webdriver-manager, pydub, flask-cors, gunicorn)
 RUN pip install --upgrade pip && pip install -r requirements.txt
 
 # Expose the Flask port
