--- a/Dockerfile.txt
+++ b/Dockerfile.txt
@@ -23,18 +23,23 @@ RUN apt-get update && apt-get install -y \
 
 # Add Google’s official GPG key and repository for Chrome
 RUN wget -q -O - https://dl.google.com/linux/linux_signing_key.pub | apt-key add - && \
-    echo "deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main" > /etc/apt/sources.list.d/google-chrome.list
+    echo "deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main" \
+         > /etc/apt/sources.list.d/google-chrome.list
 
 # Install Google Chrome
 RUN apt-get update && apt-get install -y \
     google-chrome-stable \
     --no-install-recommends
 
-# Create symbolic link so that Selenium finds Chrome at /usr/bin/google-chrome
-RUN ln -s /usr/bin/google-chrome-stable /usr/bin/google-chrome
+# Create a symbolic link so Selenium finds Chrome at /usr/bin/google-chrome
+RUN if [ -f /usr/bin/google-chrome-stable ]; then \
+        ln -sf /usr/bin/google-chrome-stable /usr/bin/google-chrome; \
+    else \
+        ln -sf /opt/google/chrome/google-chrome /usr/bin/google-chrome; \
+    fi
 
 # Set environment variable for Chrome binary location (optional but helpful)
-ENV CHROME_BIN=/usr/bin/google-chrome-stable
+ENV CHROME_BIN=/usr/bin/google-chrome
 
 # Set the working directory
 WORKDIR /app
